--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,8 +22,8 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t ghcr.io/${{ github.repository }}/ue19-lab-05:latest .
-
+        docker build -t ghcr.io/floridan169/ue19-lab-05:latest .
+    
     - name: Push Docker image
       run: |
-        docker push ghcr.io/${{ github.repository }}/ue19-lab-05:latest
+        docker push ghcr.io/floridan169/ue19-lab-05:latest
